updated FP Google Drive data import paths and code

--- a/FP_Analysis/FP_Notebook.ipynb
+++ b/FP_Analysis/FP_Notebook.ipynb
@@ -10,14 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "ac5a3ba0",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import statsmodels.api as sm\n"
+    "import statsmodels.api as sm\n",
+    "import glob, os\n"
    ]
   },
   {
@@ -30,13 +31,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "92b4e384",
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''import and remove extra columns'''\n",
+    "'''Connects to Google Drive to load in data'''\n",
     "\n",
+    "'''\n",
+    "# Connect to and mount Google Drive\n",
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')\n",
+    "\n",
+    "# Find the dataset in google drive and assign path to variable called 'Match'\n",
+    "file_paths = glob.glob('/content/drive/MyDrive/**/cleanedprices.pkl', recursive=True)\n",
+    "print(\"Found paths:\", file_paths)\n",
+    "\n",
+    "prices = pd.read_pickle(file_paths[0])\n",
+    "prices['GasolinePrices_Adjusted'] = prices['GasolinePrices_Adjusted'].round(2)\n",
+    "prices['DieselPrices_Adjusted'] = prices['DieselPrices_Adjusted'].round(2)\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "'''import and remove extra columns'''\n",
     "prices = pd.read_pickle(\"../FuelPrices/cleanedprices.pkl\")\n",
     "prices['GasolinePrices_Adjusted'] = prices['GasolinePrices_Adjusted'].round(2)\n",
     "prices['DieselPrices_Adjusted'] = prices['DieselPrices_Adjusted'].round(2)\n"
@@ -44,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "1f5e2f9d",
    "metadata": {},
    "outputs": [
